# pixelated

./: Cargo.toml  LICENSE.md  README.md  todo.md
examples/: alpha_blending.rs  conways.rs  gif.rs  minimal.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
shaders/: shader.wgsl
src/: app.rs  canvas.rs  context.rs  input.rs  lib.rs  main.rs  media.rs  prelude.rs  render.rs  time.rs  window.rs
src/cmd/: canvas.rs  keyboard.rs  media.rs  mod.rs  mouse.rs  prelude.rs  time.rs  window.rs
