[package]
name = "pixel-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "0.2"
winit = "0.27"
wgpu = "0.15"
bytemuck = { version = "1.13.1", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
gif = "0.12.0"
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
] }
