[package]
name = "pixelated"
version = "0.1.0"
edition = "2021"
description = "A small opinionated pixel renderer focusing on simplicity."
homepage = "https://github.com/stofffe/pixelated"
repository = "https://github.com/stofffe/pixelated"
documentation = "https://github.com/stofffe/pixelated"
categories = ["pixels", "graphics", "rendering"]
keywords = ["pixels", "graphics"]
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = ["examples/", ".git/"]

[dependencies]
pollster = "0.2"
winit = "0.27"
wgpu = "0.15"
bytemuck = { version = "1.13.1", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
gif = "0.12.0"
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
] }
