[package]
name = "pixelated"
version = "0.1.2"
edition = "2021"
rust-version = "1.76.0"
description = "An opinionated pixel renderer focusing on simplicity."
homepage = "https://github.com/stofffe/pixelated"
repository = "https://github.com/stofffe/pixelated"
documentation = "https://docs.rs/pixelated/latest/pixelated/"
categories = ["pixels", "graphics", "rendering"]
keywords = ["pixels", "graphics"]
license = "MIT"
readme = "README.md"
exclude = ["examples/", ".git/"]

[dependencies]
pollster = "0.2"
winit = "0.27"
wgpu = "0.15"
bytemuck = { version = "1.13.1", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
] }
